--- a/modules/custom/reddrock_custom/reddrock_custom.libraries.yml
+++ b/modules/custom/reddrock_custom/reddrock_custom.libraries.yml
@@ -4,3 +4,5 @@ reddrockcustom:
     js/reddrock-custom.js: {}
   dependencies:
     - core/jquery
+    - core/drupalSettings
+    - core/jquery.once
